@@ -1,7 +1,7 @@
 Package: modeltools
 Title: Tools and Classes for Statistical Models
-Date: $Date: 2007-09-07 11:51:52 +0200 (Fri, 07 Sep 2007) $
-Version: 0.2-13
+Date: $Date: 2007-09-26 19:02:09 +0200 (Wed, 26 Sep 2007) $
+Version: 0.2-14
 Author: Torsten Hothorn, Friedrich Leisch, Achim Zeileis 
 Maintainer: Torsten Hothorn <Torsten.Hothorn@R-project.org>
 Description: A collection of tools to deal with statistical models. 
@@ -14,4 +14,4 @@ Depends: stats, stats4
 Imports: methods
 LazyLoad: yes
 License: GPL-2
-Packaged: Tue Sep 11 14:23:48 2007; leisch
+Packaged: Wed Sep 26 19:02:35 2007; hothorn
